--- a/frontend-react/src/pages/contact/contact.css
+++ b/frontend-react/src/pages/contact/contact.css
@@ -23,13 +23,13 @@
     color: #fff;
 }
 
-.aboutHeader {
+.contact_Header {
     display: flex;
     align-items: center;
     margin-bottom: 10px;
   }
 
-  .aboutImg {
+  .contact_Img {
     width: 40px;
     height: 40px;
     border-radius: 50%;
@@ -37,11 +37,18 @@
     margin-right: 10px;
   }
 
-  .aboutInfo p {
+  .contact_Name {
     opacity: 50%;
   }
 
-  .aboutDesc {
+  .contact_Name {
+    font-size: 1.5rem;
+    font-weight: 500;
+    line-height: 1.3;
+    margin-bottom: 20px;
+  }
+
+  .contact_Phone {
     font-size: 1.5rem;
     font-weight: 500;
     line-height: 1.3;
