--- a/frontend-react/src/pages/contact/contact.css
+++ b/frontend-react/src/pages/contact/contact.css
@@ -30,27 +30,28 @@
   }
 
   .contact_Img {
-    width: 40px;
-    height: 40px;
+    width: 60px;
+    height: 60px;
     border-radius: 50%;
     border: 2px solid #996ed9;
     margin-right: 10px;
   }
 
   .contact_Name {
+    font-size: 1.5rem;
+    font-weight: 500;
+    line-height: 1.3;
+    margin-bottom: 20px;
+  }
+
+  .contact_Name p{ 
     opacity: 50%;
   }
 
-  .contact_Name {
+  .contact_Phone, .contact_Email {
     font-size: 1.5rem;
     font-weight: 500;
-    line-height: 1.3;
-    margin-bottom: 20px;
-  }
-
-  .contact_Phone {
-    font-size: 1.5rem;
-    font-weight: 500;
-    line-height: 1.3;
-    margin-bottom: 20px;
+    line-height: 1;
+    margin-bottom: 10px;
+    margin-left: 70px;
   }
