--- a/frontend-react/src/pages/about/about.css
+++ b/frontend-react/src/pages/about/about.css
@@ -4,13 +4,23 @@
     padding: 0;
 }
 
-.main {
+.aboutsection {
+  grid-area: contactsection;
+  }
+  
+  .sidebar {
+  grid-area: sidesection;
+  }
+  
+  .main {
     max-width: 1440px;
     margin: 100px auto;
     padding: 20px;
     display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    gap: 30px;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto;
+    grid-template-areas:
+      "aboutsection aboutsection . sidesection"
   }
 
 .about {
