--- a/frontend-react/src/pages/contact/contact.css
+++ b/frontend-react/src/pages/contact/contact.css
@@ -1,48 +1,56 @@
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+.contactsection {
+grid-area: contactsection;
+}
+
+.sidebar {
+grid-area: sidesection;
 }
 
 .main {
-    max-width: 1440px;
-    margin: 100px auto;
-    padding: 20px;
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    gap: 30px;
-  }
+  max-width: 1440px;
+  margin: 100px auto;
+  padding: 20px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: auto;
+  grid-template-areas:
+    "contactsection contactsection . sidesection"
 
-.about {
-    background: #fff;
-    border-radius: 10px;
-    padding: 30px;
-    box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
-    margin-bottom: 10px;
-    background: hsl(263, 55%, 52%);
-    color: #fff;
 }
 
-.contact_Header {
-    display: flex;
-    align-items: center;
-    margin-bottom: 10px;
-  }
+.contact {
+  background: #fff;
+  border-radius: 10px;
+  padding: 30px;
+  box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+  margin-bottom: 10px;
+  background: hsl(263, 55%, 52%);
+  color: #fff;
+}
 
-  .contact_Img {
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    border: 2px solid #996ed9;
-    margin-right: 10px;
-  }
+.contactHeader {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
 
-  .contact_Name {
-    font-size: 1.5rem;
-    font-weight: 500;
-    line-height: 1.3;
-    margin-bottom: 20px;
-  }
+.contactImg {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: 2px solid #996ed9;
+  margin-right: 10px;
+}
+
+.contactInfo p {
+  opacity: 50%;
+}
 
   .contact_Name p{ 
     opacity: 50%;
