--- a/frontend-react/src/pages/about/about.css
+++ b/frontend-react/src/pages/about/about.css
@@ -4,24 +4,14 @@
     padding: 0;
 }
 
-.aboutsection {
-  grid-area: contactsection;
-  }
-  
-  .sidebar {
-  grid-area: sidesection;
-  }
-  
-  .main {
-    max-width: 1440px;
-    margin: 100px auto;
-    padding: 20px;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: auto;
-    grid-template-areas:
-      "aboutsection aboutsection . sidesection"
-  }
+  .wrapper {
+      max-width: 1440px;
+      margin: 100px auto;
+      padding: 20px;
+      display: grid;
+      grid-template-columns: 3fr 1fr;
+      grid-template-rows: auto;
+    }
 
 .about {
     background: #fff;
