--- a/frontend-react/src/pages/contact/contact.css
+++ b/frontend-react/src/pages/contact/contact.css
@@ -4,24 +4,13 @@
   padding: 0;
 }
 
-.contactsection {
-grid-area: contactsection;
-}
-
-.sidebar {
-grid-area: sidesection;
-}
-
-.main {
+.wrapper {
   max-width: 1440px;
   margin: 100px auto;
   padding: 20px;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 3fr 1fr;
   grid-template-rows: auto;
-  grid-template-areas:
-    "contactsection contactsection . sidesection"
-
 }
 
 .contact {
