--- a/frontend-react/src/pages/single_post_view/single_post_view.css
+++ b/frontend-react/src/pages/single_post_view/single_post_view.css
@@ -1,3 +1,24 @@
-.single {
-    display: flex;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+.singlepost {
+  grid-area: singlepost;
+  }
+  
+  .sidebar {
+  grid-area: sidebar;
+  }
+
+  .wrapper {
+    max-width: 1440px;
+    margin: 100px auto;
+    padding: 20px;
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    grid-template-rows: auto;
+    grid-template-areas:
+      "singlepost sidebar"
   }
