--- a/client/src/components/common/nav/navbar.css
+++ b/client/src/components/common/nav/navbar.css
@@ -1,4 +1,4 @@
-.nav_header {
+.navWrapper {
     width: 100%;
     height: 50px;
     background-color: white;
@@ -28,5 +28,44 @@
     font-weight: 300;
     cursor: pointer;
   }
+
+  
+.topRight {
+  flex: 3;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.topImg {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  object-fit: cover;
+  cursor: pointer;
+}
+
+
+.topList {
+  display: flex;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.topListItem {
+  margin-right: 20px;
+  font-size: 18px;
+  font-weight: 300;
+  cursor: pointer;
+}
+
+.topSearchIcon {
+  font-size: 18px;
+  color: #666;
+  cursor: pointer;
+  margin-left: 15px;
+}
   
 
