--- a/client/src/components/content/singlePost/singlepost.css
+++ b/client/src/components/content/singlePost/singlepost.css
@@ -14,6 +14,7 @@
   height: 300px;
   border-radius: 5px;
   object-fit: cover;
+  color: blue
 }
 
 .singlePostTitle {
@@ -101,7 +102,7 @@
 /* styling to the ckeditor div */
 
 
-/* styling for the ckeditor images.  the <img> tag is wrapped inside the <figure className="image" tag */
+/* styling for the ckeditor images.  the <img> tag is wrapped inside the <figure className="image" tag
 .image {
   display: flex;
   width: 50%;
@@ -116,5 +117,13 @@ img {
   height: 100%;
   border-radius: 10px;
   object-fit: cover;
-
 }
+
+.image-style-side {
+  float: right;
+  margin-left: var(--ck-image-style-spacing);
+  max-width: 50%;
+}
+
+*/
+
