--- a/src/components/content/singlePost/singlepost.css
+++ b/src/components/content/singlePost/singlepost.css
@@ -17,26 +17,22 @@
   color: blue
 }
 
+.editHeader, 
+.editSubHeader, 
+.editModuleNumber, 
+.editTitle {
+    font-size: 18px;
+    padding: 10px;
+    width: 70vw;
+}
+
 .singlePostTitle {
-  text-align: center;
+  text-align: left;
   margin: 10px;
   font-family: "Lora", serif;
   font-size: 28px;
 }
 
-.singlePostTitleInput {
-  margin: 10px;
-  font-family: "Lora", serif;
-  font-size: 28px;
-  text-align: center;
-  border: none;
-  color: gray;
-  border-bottom: 1px solid lightgray;
-}
-
-.singlePostTitleInput:focus {
-  outline: none;
-}
 
 .singlePostEdit {
   float: right;
